# school_app_fastapi_backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.it.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: app.py  dependencies.py
app/core/: config.py  database.py  logger.py  rate_limiting.py  redis.py  settings.py
app/exceptions/: exceptions.py  handlers.py
app/models/: __init__.py  auth.py  company.py  course.py  guid.py  internship_agreement.py  internship_entry.py  password.py  student.py  token.py
app/routers/: auth.py  course.py  internship.py  student.py
app/services/: auth.py  course.py  email.py  internship.py  student.py
app/utils/: hash_reset_token.py  json_printer.py  uuid_converter.py  validators.py
test/: conftest.py  test_prova.py
test/integration/routers/: test_auth.py  test_student.py
test/integration/routers/auth/: test_login.py  test_register.py
test/integration/routers/course/: test_course.py
test/integration/routers/student/: test_student.py
test/unit/models/: test_password.py
test/unit/services/: test_auth.py
test/unit/utils/: test_validators.py
