[project]
name = "school-app-fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "resend>=2.19.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
