[project]
name = "school-app-fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
[tool.pytest.ini_options]
asyncio_mode = "auto"

dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.124.2",
    "fastapi-utilities>=0.3.1",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymysql[rsa]>=1.1.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "resend>=2.19.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
